--- a/Lab04_Debug/Task-1/Makefile
+++ b/Lab04_Debug/Task-1/Makefile
@@ -1,5 +1,9 @@
 # 定義變數
 CC = gcc
+LD = gcc
+CFLAGS = -g -Wall
+LDFLAGS = 
+RM = /bin/rm -f
 TARGET = littlecode
 SRC = $(TARGET).c
 OBJ = $(TARGET).o
