--- a/Lab06_MemUsage/Task-6/makefile
+++ b/Lab06_MemUsage/Task-6/makefile
@@ -3,7 +3,7 @@ LD = gcc
 CFLAGS = -O3 -Wall -Werror
 LDFLAGS = 
 RM = /bin/rm -f
-OBJS = main.o func.o
+OBJS = main.o 
 EXECUTABLE = pure_test
 
 all:$(EXECUTABLE)
@@ -11,10 +11,10 @@ all:$(EXECUTABLE)
 $(EXECUTABLE): $(OBJS)
 	$(LD) $(LDFLAGS) $(OBJS) -o $(EXECUTABLE)
 
-func.o: func.h func.c
-	$(CC) $(CFLAGS) -c func.c	
+# func.o: func.h func.c
+# 	$(CC) $(CFLAGS) -c func.c	
 
-main.o: main.c func.h
+main.o: main.c
 	$(CC) $(CFLAGS) -c main.c 
 
 clean:
