--- a/Lab/Lab09_Pthreads_II/Task-7/Makefile
+++ b/Lab/Lab09_Pthreads_II/Task-7/Makefile
@@ -1,4 +1,9 @@
+all: matmul matmul_pthread
 matmul: matmul.c
 	gcc -Wall -O3 -o matmul matmul.c
+
+matmul_pthread: matmul_pthread.c
+	gcc -Wall -O3 -o matmul_pthread matmul_pthread.c
+
 clean:
-	rm -f matmul
+	rm -f matmul matmul_pthread
