--- a/Assignment/Assignment4/A4/Openmp/makefile
+++ b/Assignment/Assignment4/A4/Openmp/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 LD = gcc
 CFLAGS = -O3 -ffast-math -march=native -fopt-info-vec -Wall -fopenmp
-LDFLAGS =  -fopenmp
+LDFLAGS = 
 RM = /bin/rm -f
 OBJS = galsim.o
 EXECUTABLE = galsim
