feat: v2 bitmap single thread
25x25
real    0m0.008s
user    0m0.003s
sys     0m0.001s
36x36
real    0m0.171s
user    0m0.167s
sys     0m0.000s
64x64
real    0m11.369s
user    0m11.364s
sys     0m0.000s

--- a/Project/makefile
+++ b/Project/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 LD = gcc
-CFLAGS = -Wall -fopenmp -O3 #-ffast-math -march=native -fopt-info-vec  
-LDFLAGS = -fopenmp
+CFLAGS = -Wall -O3# -fopenmp  #-ffast-math -march=native -fopt-info-vec  
+LDFLAGS = #-fopenmp
 RM = /bin/rm -f
 OBJS = sudoku.o
 EXECUTABLE = sudoku
