--- a/Project/project/makefile
+++ b/Project/project/makefile
@@ -2,7 +2,7 @@ CC = gcc
 LD = gcc
 CFLAGS = -Wall -O3 -fopenmp  #-ffast-math -march=native -fopt-info-vec  
 RM = /bin/rm -f
-EXECUTABLE = normal_parallel bitmask_parallel bitmask normal
+EXECUTABLE = normal_parallel bitmask_parallel bitmask normal bitmask_parallel_same
 
 all:$(EXECUTABLE)
 
@@ -11,6 +11,9 @@ normal_parallel: normal_parallel.c
 
 bitmask_parallel: bitmask_parallel.c
 	$(CC) $(CFLAGS) -o bitmask_parallel bitmask_parallel.c
+
+bitmask_parallel_same: bitmask_parallel_same.c
+	$(CC) $(CFLAGS) -o bitmask_parallel_same bitmask_parallel_same.c
 
 bitmask: bitmask.c
 	$(CC) $(CFLAGS) -o bitmask bitmask.c
