--- a/Assignment/Assignment4/tmpdir_for_checking/A4/Pthreads/makefile
+++ b/Assignment/Assignment4/tmpdir_for_checking/A4/Pthreads/makefile
@@ -1,6 +1,6 @@
 CC = gcc
 LD = gcc
-CFLAGS = -O3 -ffast-math -march=native -fopt-info-vec -Wall -fopenmp
+CFLAGS = -O3 -ffast-math -march=native -fopt-info-vec -Wall
 LDFLAGS =  -fopenmp
 RM = /bin/rm -f
 OBJS = galsim.o
